# crew_lab

./: .gitignore  README.md  pyproject.toml
assembler/: .gitignore  Modelfile_mythomax  README.md  pyproject.toml
assembler/crew_assembler/: agents.py  assembler.py  cli.py  file_ops.py  main.py  tasks.py  utils.py
assembler/crew_assembler/configs/: _template.toml  ba-weather.toml  example.toml  remix_selector.toml  tools_lab-read.toml  tools_lab-write.toml  yt_summarizer.toml
assembler/crew_assembler/data_in/: langchain_tools.txt
assembler/crew_assembler/tools/: __init__.py  chroma.py  duckduckgo.py  html_tools.py  memory.py  web.py  youtube.py  youtube_transcript.py
themesquad/: README.md  pyproject.toml
themesquad/themesquad/: agents.py  main.py
themesquad/themesquad/tools/: youtube_transcript.py
tomltests/: example.toml  tomllab.py
