[tool.poetry]
name = "crew-lab"
version = "0.1.0"
description = "cru labb"
authors = ["hex benjamin <hex@hexbenjam.in>"]
license = "GPL-v3-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
crew_assembler = { path = "./assembler", develop = true }

[tool.poetry.group.dev.dependencies]
# sourcery = "^1.15.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
