[tool.poetry]
name = "crew-assembler"
version = "0.0.4"
description = "..."
authors = ["hex benjamin <hex@hexbenjam.in>"]
license = "GPL-v3-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
crewai = "<0.10.0"
# crewai = "^0.10.0"
tomlkit = "==0.12.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
# optionals:chroma
huggingface-hub = { version = "^0.20.3", optional = true }
chromadb = { version = "^0.4.22", optional = true }
sentence-transformers = { version = "^2.3.1", optional = true }
# optionals:web
youtube-transcript-api = { version = "^0.6.2", optional = true }
duckduckgo-search = { version = "^4.4.2", optional = true }
musicbrainzngs = { version = "^0.7.1", optional = true }

[tool.poetry.group.dev.dependencies]
sourcery = "^1.15.0"

[tool.poetry.extras]
chroma = ["huggingface-hub", "chromadb", "sentence-transformers"]
web = ["youtube-transcript-api", "duckduckgo-search", "musicbrainzngs"]
tools = [
    "huggingface-hub",
    "chromadb",
    "sentence-transformers",
    "youtube-transcript-api",
    "duckduckgo-search",
    "musicbrainzngs",
]

[tool.poetry.scripts]
assembler = "crew_assembler.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
