[tool.poetry]
name = "crew-assembler"
version = "0.0.5"
description = "..."
authors = ["hex benjamin <hex@hexbenjam.in>"]
license = "GPL-v3-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
crewai = "^0.5.5"
# crewai = "^0.10.0"
tomlkit = "==0.12.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
# optionals:memory
huggingface-hub = { version = "^0.17.3", optional = true }
chromadb = { version = "^0.4.22", optional = true }
sentence-transformers = { version = "^2.3.1", optional = true }
pymemgpt = { extras = ["local"], version = "^0.3.1", optional = true }
# optionals:web
duckduckgo-search = { version = "^4.4.2", optional = true }
unstructured = { version = "^0.12.4", optional = true }
beautifulsoup4 = { version = "^4.12.3", optional = true }
lxml = { version = "^5.1.0", optional = true }
# optionals:youtube
youtube-transcript-api = { version = "^0.6.2", optional = true }
insanely-fast-whisper = { version = "^0.0.13", optional = true }
pytube = { version = "^15.0.0", optional = true }
pathvalidate = { version = "^3.2.0", optional = true }
ffmpeg = { version = "^1.4", optional = true }

[tool.poetry.group.dev.dependencies]
sourcery = "^1.15.0"
rich = "^13.7.0"

[tool.poetry.extras]
memory = ["huggingface-hub", "chromadb", "sentence-transformers", "pymemgpt"]
web = ["duckduckgo-search", "unstructured"]
youtube = [
    "youtube-transcript-api",
    "insanely-fast-whisper",
    "pytube",
    "pathvalidate",
    "ffmpeg",
]

[tool.poetry.scripts]
assembler = "crew_assembler.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
